--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -33,6 +33,9 @@
             <LinearLayout
                 android:id="@id/parent"
                 android:layout_width="match_parent"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="5dp"
                 android:layout_height="220dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/movie_name">
@@ -90,7 +93,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:paddingEnd="10dp"
-                android:text="Release date: 22-22-2022"
+                tools:text="Release date: 22-22-2022"
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +107,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="50dp"
                 android:paddingEnd="10dp"
-                android:text="Country:"
+                tools:text="Country:"
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -118,7 +121,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:paddingEnd="10dp"
-                android:text="Language:"
+                tools:text="Language:"
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -132,7 +135,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:paddingEnd="10dp"
-                android:text="Production companies:"
+                tools:text="Production companies:"
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -147,7 +150,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:paddingEnd="10dp"
-                android:text="Budget : "
+                tools:text="Budget : "
                 android:textColor="@color/green"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -172,7 +175,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:paddingEnd="10dp"
-                android:text="Genre: "
+                tools:text="Genre: "
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -186,7 +189,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:paddingEnd="10dp"
-                android:text="Overview: "
+                tools:text="Overview: "
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toTopOf="@id/cast_craw"
@@ -198,8 +201,9 @@
                 android:id="@+id/cast_craw"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_margin="21dp"
                 android:text="Cast"
+                android:visibility="invisible"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -210,7 +214,10 @@
                 android:id="@+id/all_button_cast"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
+                android:layout_marginTop="11dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/movie_overview">
 
@@ -256,7 +263,8 @@
                 android:id="@+id/video_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_margin="21dp"
+                android:visibility="invisible"
                 android:text="Video"
                 android:textColor="@color/white"
                 android:textSize="18sp"
@@ -285,9 +293,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="18dp"
-                android:layout_marginTop="16dp"
+                android:id="@id/similar_text"
+                android:layout_marginTop="21dp"
                 android:layout_marginBottom="10dp"
                 android:text="Similar Movies"
+                android:visibility="invisible"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -301,10 +311,12 @@
                 android:id="@+id/all_button_similar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
+                android:layout_marginTop="11dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/youtube_video">
-
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -335,11 +347,19 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                android:layout_marginBottom="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/youtube_video"
                 tools:itemCount="5"
                 tools:listitem="@layout/item_now_playing" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/shape_background_photo"
+                app:layout_constraintTop_toBottomOf="@id/movie_name" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
