--- a/app/src/main/res/layout/activity_about_actor.xml
+++ b/app/src/main/res/layout/activity_about_actor.xml
@@ -186,27 +186,28 @@
 
             <TextView
                 android:id="@+id/similar_text"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="18dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="12dp"
+                android:visibility="invisible"
                 android:text="Movies"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/similar_movies"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/movie_overview" />
+                app:layout_constraintBottom_toTopOf="@id/similar_movies" />
 
             <LinearLayout
                 android:id="@+id/all_button"
                 android:layout_width="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/movie_overview">
+                app:layout_constraintBottom_toTopOf="@id/similar_movies">
 
 
                 <TextView
@@ -233,14 +234,14 @@
                 android:id="@+id/similar_movies"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="45dp"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                android:layout_marginBottom="20dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/similar_text"
+                app:layout_constraintTop_toBottomOf="@id/movie_overview_text"
                 tools:itemCount="5"
                 tools:listitem="@layout/item_now_playing" />
 
