--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -95,29 +95,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
         android:text="Don't have an account ? "
         android:textColor="@color/white"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sing_in" />
 
     <TextView
         android:id="@+id/sing_up"
         android:layout_width="wrap_content"
+        android:layout_marginTop="28dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:maxWidth="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="30dp"
         android:fontFamily="sans-serif-condensed"
-        android:gravity="center"
-        android:text="@string/link_click"
-        android:textAllCaps="true"
+        android:maxHeight="40dp"
+        android:text="SIGN UP"
         android:textColor="@color/green"
-        android:textSize="18sp"
+        android:textSize="19sp"
         app:layout_constraintStart_toEndOf="@id/text"
         app:layout_constraintTop_toBottomOf="@id/sing_in" />
 
@@ -127,14 +128,14 @@
         android:layout_height="?actionBarSize"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/shape_background"
         android:fontFamily="sans-serif-condensed"
         android:text="Continue"
         android:textColor="@color/green"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/sing_up" />
 
 
     <ProgressBar
