--- a/app/src/main/res/layout/fragment_tmdb.xml
+++ b/app/src/main/res/layout/fragment_tmdb.xml
@@ -20,7 +20,7 @@
             android:layout_marginTop="18dp"
             android:text="Your Account"
             android:textColor="@color/white"
-            android:textSize="25dp"
+            android:textSize="25sp"
             app:layout_constraintStart_toEndOf="@id/account_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -41,11 +41,13 @@
     <Button
         android:id="@+id/sing_in"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_margin="60dp"
+        android:text="   Visit the site   "
         android:background="@drawable/shape_button"
         android:padding="8dp"
-        android:text="   Open Site   "
+        android:textAllCaps="false"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/action_bar" />
@@ -74,7 +76,7 @@
             android:layout_marginTop="9dp"
             android:text="Info "
             android:textColor="@color/green"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
 
     </LinearLayout>
@@ -111,7 +113,7 @@
             android:layout_marginTop="9dp"
             android:text="Favourite"
             android:textColor="@color/green"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 
@@ -148,7 +150,7 @@
             android:layout_marginTop="9dp"
             android:text="Contact"
             android:textColor="@color/green"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 
