--- a/app/src/main/res/layout/item_see_all_celebrities.xml
+++ b/app/src/main/res/layout/item_see_all_celebrities.xml
@@ -9,6 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/item_parent"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="128dp"
         android:layout_marginBottom="10dp"
