--- a/app/src/main/res/layout/activity_about_actor.xml
+++ b/app/src/main/res/layout/activity_about_actor.xml
@@ -173,10 +173,11 @@
 
             <TextView
                 android:id="@+id/movie_overview"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:paddingEnd="10dp"
+                android:layout_marginBottom="30dp"
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 app:layout_constraintBottom_toTopOf="@id/similar_text"
